@@ -140,6 +140,7 @@ popd
 * Thu Mar 17 2011 <mgoldman@redhat.com> - 0.9.1-1
 - Upstream release: 0.9.1
 - [BGBUILD-188] Use libuestfs instead mounting partitions manually for EC2 appliances
+- [BGBUILD-97] some filesystems dont get unmounted on BG interruption
 
 * Tue Mar 01 2011 <msavy@redhat.com> - 0.9.0-1
 - Upstream release: 0.9.0
